<resources>
    <string name="app_name">Alarmpaca</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="time_sample">10:41 PM</string>
    <string name="date_sample">Mon , November 28</string>
    <string name="action_delete">Delete</string>
    <string name="time_period_am">AM</string>
    <string name="select_indicator">Select Indicator</string>
    <string name="repeat">Repeat</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="fri">Fri</string>
    <string name="thu">Thu</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="mon">Mon</string>
    <string name="sound">Sound</string>
    <string name="alpaca_sound">Alpaca Sound</string>
    <string name="snooze">Snooze</string>
    <string name="login">Login</string>
    <string name="clear">Clear</string>
    <string name="clear_task">Clear Task</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="select_date">Select Date</string>
    <string name="alpaca_icon">Alpaca Icon</string>
    <string name="date_sample_short">19 Nov 2017</string>
    <string name="shorten_task_note">Shorten task note</string>
    <string name="clear_completed">Clear Completed</string>
    <string name="action_complete">Complete</string>
</resources>
