<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:orientation="horizontal"
    android:background="?android:attr/selectableItemBackground" >

    <LinearLayout
        android:id="@+id/timeLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/time"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/periodTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/time_period_am" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/date" />

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/toggleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/iv_selection_indicator"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/select_indicator"
                android:visibility="gone"
                tools:src="@drawable/drawable_circle" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>