<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/clock_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_clock_black_48dp"
                android:fontFamily="sans-serif-thin"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/time"
                android:textAlignment="center"
                android:textSize="80sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal"
                android:text="@string/repeat"
                android:textSize="25sp" />


            <!--Library : https://github.com/TouchBoarder/weekdays-buttons-bar-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--This ViewStub will be replaced by a RecyclerView displaying the weekdays -->
                <ViewStub
                    android:id="@+id/weekdays_stub"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal"
                android:text="@string/sound"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/alpaca_sound"
                    android:src="@drawable/ic_alpaca" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="5" />

            </LinearLayout>

            <Switch
                android:id="@+id/snoozeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/snooze"
                android:textSize="25sp"
                android:textStyle="normal" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


    <ru.dimorinny.floatingtextbutton.FloatingTextButton
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="16dp"
        app:floating_background_color="?attr/colorPrimary"
        app:floating_icon="@drawable/ic_close_circle_white_24dp"
        app:floating_title="CANCEL"
        app:floating_title_color="@color/white"
        app:layout_anchor="@+id/scrollView"
        app:layout_anchorGravity="bottom|center">

    </ru.dimorinny.floatingtextbutton.FloatingTextButton>

    <ru.dimorinny.floatingtextbutton.FloatingTextButton
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"
        app:floating_background_color="?attr/colorPrimary"
        app:floating_icon="@drawable/ic_checkbox_multiple_marked_white_24dp"
        app:floating_title="SAVE..."
        app:floating_title_color="@color/white"
        app:layout_anchor="@+id/scrollView"
        app:layout_anchorGravity="bottom|center">

    </ru.dimorinny.floatingtextbutton.FloatingTextButton>


</android.support.design.widget.CoordinatorLayout>